<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="player_more_actions">More actions</string>
    <string name="player_more_short">MORE</string>
    <string name="player_more_song_subtitle">%1$s · %2$s</string>
    <string name="player_go_to_album">Go to album</string>
    <string name="player_lyrics">Lyrics</string>
    <string name="player_open_lyrics">Open lyrics</string>
    <string name="player_shuffle_on">Shuffle on</string>
    <string name="player_shuffle_off">Shuffle off</string>
    <string name="player_previous_song">Previous song</string>
    <string name="player_next_song">Next song</string>
    <string name="player_repeat_off">Repeat off</string>
    <string name="player_repeat_all">Repeat all</string>
    <string name="player_repeat_one">Repeat one</string>
    <string name="player_pause">Pause</string>
    <string name="player_play">Play</string>
    <string name="player_sleep_timer_active">Sleep timer active</string>
    <string name="player_open_queues">Open queues</string>
    <string name="player_collapse">Collapse player</string>
    <string name="player_album_art_for">Album art for %1$s</string>
    <string name="player_open_for">Open player for %1$s</string>
    <string name="player_unknown_title">Unknown Title</string>
    <string name="player_unknown_artist">Unknown Artist</string>
    <string name="player_unknown_album">Unknown Album</string>
    <string name="player_current_album_artwork">Current album artwork</string>
    <string name="player_cassette_previous">REW / PREV</string>
    <string name="player_cassette_next">NEXT / FWD</string>
    <string name="player_cassette_pause">PAUSE</string>
    <string name="player_cassette_play">PLAY</string>
    <string name="player_cassette_mix">MIX</string>
    <string name="player_cassette_loop">LOOP</string>
    <string name="player_cassette_all">ALL</string>
    <string name="player_cassette_one">ONE</string>
    <string name="player_cassette_save">SAVE</string>
    <string name="player_cassette_queue">QUEUE</string>
    <string name="player_previous_hold">Previous track. Hold to seek backward</string>
    <string name="player_next_hold">Next track. Hold to seek forward</string>
    <string name="player_seek_backward_hold">Seek backward while held</string>
    <string name="player_seek_forward_hold">Seek forward while held</string>
    <string name="player_disable_shuffle">Disable shuffle</string>
    <string name="player_enable_shuffle">Enable shuffle</string>
    <string name="player_enable_repeat_all">Enable repeat all</string>
    <string name="player_enable_repeat_one">Enable repeat one</string>
    <string name="player_disable_repeat">Disable repeat</string>
    <string name="player_remove_favorite">Remove from favorites</string>
    <string name="player_add_favorite">Add to favorites</string>
    <string name="player_added_to_favorites">Added to favorites</string>
    <string name="player_removed_from_favorites">Removed from favorites</string>
    <string name="player_wheel_now_playing">Now Playing</string>
    <string name="player_wheel_music">Music</string>
    <string name="player_wheel_menu">MENU</string>
    <string name="player_flip_queue">QUEUE</string>
    <string name="player_flip_close">CLOSE</string>
    <string name="player_flip_power">PWR</string>
    <string name="player_flip_audio_brand">POCKET FLIP</string>
    <string name="player_flip_play">PLAY</string>
    <string name="player_flip_pause">PAUSE</string>
    <string name="player_flip_format">FORMAT %1$s</string>
    <string name="player_flip_local">LOCAL</string>
    <string name="player_flip_track_data">TRACK DATA</string>
    <string name="player_flip_run">RUN</string>
    <string name="player_flip_hold">HOLD</string>
    <string name="player_no_track_loaded">No track loaded</string>
    <string name="player_open_current_album">Open current album</string>
    <string name="player_track_position">TRACK POSITION</string>
    <string name="player_cassette_audio_brand">Pocket Cassette</string>
    <string name="player_cassette_stereo_local_tape">STEREO  •  LOCAL  •  TAPE MODE</string>
    <string name="player_cassette_run">RUN</string>
    <string name="player_cassette_deck_mark">DC // 01</string>
    <string name="player_cassette_tape_bay">TAPE BAY // SIDE A</string>
    <string name="player_cassette_motion">MOTION</string>
    <string name="player_cassette_hold">HOLD</string>
    <string name="player_cassette_artwork_label">Album artwork cassette label</string>
    <string name="player_cassette_counter_position">TAPE COUNTER // POSITION</string>
    <string name="player_rack_main_deck">MAIN DECK</string>
    <string name="player_rack_close">CLOSE</string>
    <string name="player_rack_spectrum_monitor">SPECTRUM MONITOR</string>
    <plurals name="player_rack_playback_tracks">
        <item quantity="one">PLAYBACK RACK // %1$s TRACK</item>
        <item quantity="other">PLAYBACK RACK // %1$s TRACKS</item>
    </plurals>
    <string name="player_rack_queue">QUEUE</string>
    <string name="player_rack_no_track_loaded">NO TRACK LOADED</string>
    <string name="player_rack_play">PLAY</string>
    <string name="player_rack_pause">PAUSE</string>
    <string name="player_rack_shuffle">SHUF</string>
    <string name="player_rack_previous">PREV</string>
    <string name="player_rack_next">NEXT</string>
    <string name="player_rack_repeat">REP</string>
    <string name="player_rack_all">ALL</string>
    <string name="player_rack_one">ONE</string>
    <string name="player_rack_favorite">FAV</string>
    <string name="player_disc_repeat_one">REPEAT 1</string>
    <string name="player_disc_repeat_all">REPEAT ALL</string>
    <string name="player_disc_repeat">REPEAT</string>
    <string name="player_disc_shuffle">SHUFFLE</string>
    <string name="player_disc_stereo">STEREO</string>
    <string name="player_disc_queue_name">QUEUE %1$s</string>
    <string name="player_disc_number_total">DISC %1$d/%2$d</string>
    <string name="player_disc_number">DISC %1$d</string>
    <string name="player_disc_unknown_number_total">DISC --/%1$d</string>
    <string name="player_disc_unknown_number">DISC --</string>
    <string name="player_disc_no_disc_loaded">NO DISC LOADED</string>
    <string name="player_disc_track_number">TRACK %1$s</string>
    <string name="player_disc_queues">QUEUES</string>
    <string name="player_disc_favorite">FAVORITE</string>
    <string name="player_disc_level">LEVEL</string>
    <string name="player_disc_digital_disc">DIGITAL DISC</string>
    <string name="player_disc_insert_this_end">INSERT THIS END</string>
    <string name="player_disc_unknown_minutes">-- MIN</string>
    <string name="player_disc_minutes">%1$d MIN</string>
    <string name="player_wheel_songs">Songs</string>
    <string name="player_wheel_artists">Artists</string>
    <string name="player_wheel_albums">Albums</string>
    <string name="player_wheel_no_songs">No songs found</string>
    <string name="player_wheel_no_artists">No artists found</string>
    <string name="player_wheel_no_albums">No albums found</string>
    <string name="player_wheel_check_library">Check your library</string>
    <string name="player_wheel_no_song_selected">No song selected</string>
    <string name="player_wheel_choose_song">Choose a song</string>
    <string name="player_wheel_volume">Volume</string>
    <string name="player_wheel_shuffle_on_repeat_off">Shuffle On • Repeat Off</string>
    <string name="player_wheel_shuffle_on_repeat_all">Shuffle On • Repeat All</string>
    <string name="player_wheel_shuffle_on_repeat_one">Shuffle On • Repeat One</string>
    <string name="player_wheel_shuffle_off_repeat_off">Shuffle Off • Repeat Off</string>
    <string name="player_wheel_shuffle_off_repeat_all">Shuffle Off • Repeat All</string>
    <string name="player_wheel_shuffle_off_repeat_one">Shuffle Off • Repeat One</string>
    <plurals name="player_wheel_song_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="player_view_artwork">View artwork</string>
    <string name="player_artwork_viewer">Artwork viewer</string>
    <string name="player_artwork_unavailable">Artwork unavailable</string>
    <string name="player_artwork_loading">Loading artwork</string>
</resources>
